--- a/package.json
+++ b/package.json
@@ -9,6 +9,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.0"
+    "@astrojs/svelte": "^7.0.1",
+    "@astrojs/tailwind": "^5.1.2",
+    "@neodrag/svelte": "^2.0.6",
+    "@types/matter-js": "^0.19.8",
+    "astro": "^5.0.0",
+    "bits-ui": "^0.21.16",
+    "chart.js": "^4.4.7",
+    "matter-js": "^0.20.0",
+    "phosphor-svelte": "^3.0.0",
+    "svelte": "^5.4.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2",
+    "uuid": "^11.0.3"
   }
 }
